Try to work around java module system in unit tests